my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/EBITRN_1/EBITRN_1.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.2\errors\T_EBITRN_1.dml:12:9: error EBITRN: negative size (2 < 3) of bit range for 'b.r.f'
